--- a/whenbuild/build.gradle
+++ b/whenbuild/build.gradle
@@ -15,6 +15,8 @@ android {
         versionCode 1
         versionName "1.0"
 
+        buildConfigField('String', 'BUILD_TIME', "\"${new Date().toLocalDateTime()}\"")
+
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
     }
@@ -33,13 +35,13 @@ android {
         jvmTarget = '1.8'
     }
 }
-android {
-    buildTypes {
-        debug {
-            buildConfigField('String', 'BUILD_TIME', "\"${new Date().toLocalDateTime()}\"")
-        }
-    }
-}
+//android {
+//    buildTypes {
+//        debug {
+//            buildConfigField('String', 'BUILD_TIME', "\"${new Date().toLocalDateTime()}\"")
+//        }
+//    }
+//}
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.6.0'
